--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -32,31 +32,31 @@ AeQi7H=查找可用语言...
 # ●=info@41
 DzUa6j=找到语言: $lang_name ($lang_file)
 # ◆=resolve_lang_files
-# ●=string@69
+# ●=_mf@69
 BcI858=模式参数错误 {0}
-# ●=string@71
+# ●=_mf@71
 Aw82xn={0} 语言文件已存在
-# ●=string@74
+# ●=_mf@74
 A7XPUC={0} 语言文件不存在
 # ◆=add_lang_files
-# ●=string@133
-BGAgyU=# {0} 语言包，文档结构：\n\
+# ●=_mf@133
+C0Yu3-=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
-# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 2. 解析函数 exiterr | error | success | warning | info | string | _mf\n\
 # 3. key=distinct hash code + position + order\n\
 # 4. value=localized string
 # ●=info@143
 Aw3y8l={0} 语言文件已创建
 # ◆=do_del_lang_files
-# ●=string@159
+# ●=_mf@159
 Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
-# ●=string@171
+# ●=_mf@171
 B0BXr_=确定要删除 {0} 语言文件吗?
-# ●=string@172
+# ●=_mf@172
 C7-6zR=操作已取消，文件未删除
 # ◆=get_lang_files
-# ●=string@193
+# ●=_mf@193
 CEjzNC=确定要新增 {0} 语言文件吗?
 # ●=exiterr@206
 DPIGII=请先添加语言文件
@@ -76,27 +76,14 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=config_sshd
-# ●=info@158
+# ●=info@144
 CbkyTT=sshd 未安装，正在安装...
-# ●=info@179
+# ●=info@163
 B8B0b-=SSH 配置已生效
-# ●=warning@181
+# ●=warning@165
 AWNMMM=systemctl restart $ssh_service 失败，请手动执行
-# ◆=configure_ip
-# ●=info@201
-AGC_1W=NetworkManager 正在运行
-# ●=info@204
-BqbrMF=ifupdown 正在运行
-# ●=info@207
-AHezXa=wicked 正在运行
-# ●=info@210
-BfE9I1=network-scripts 正在运行
-# ●=info@213
-C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@216
-DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@222
+# ●=info@188
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -107,18 +94,18 @@ DVh_Ho=Usage: show_help_info [command]\n \
 # ●=exiterr@16
 AfYlCL=Error: Command '$cmd' not found.
 # ◆=do_del_lang_files
-# ●=string@55
+# ●=_mf@55
 Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
-# ●=string@67
+# ●=_mf@67
 B0BXr_=确定要删除 {0} 语言文件吗?
-# ●=string@68
+# ●=_mf@68
 C7-6zR=操作已取消，文件未删除
 # ◆=add_lang_files
-# ●=string@81
-BGAgyU=# {0} 语言包，文档结构：\n\
+# ●=_mf@81
+C0Yu3-=# {0} 语言包，文档结构：\n\
 # 1. 自动处理 bin | lib 目录 sh 文件\n\
-# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 2. 解析函数 exiterr | error | success | warning | info | string | _mf\n\
 # 3. key=distinct hash code + position + order\n\
 # 4. value=localized string
 # ●=info@91
@@ -158,7 +145,7 @@ CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
 
 # ■=lib/docker.sh
 # ◆=show_notice
-# ●=string@22
+# ●=_mf@22
 A-Na7B=多选组件：格式如 1 3 4；再次选择相同项目可取消选择，回车结束
 # ◆=infra_setup
 # ●=info@154
@@ -169,66 +156,168 @@ Cb5gv1=⏎ 选择完成，正在保存配置到 .env 文件...
 # ●=exiterr@40
 BzOdCD=JSON format error
 
+# ■=lib/lang_utils.sh
+# ◆=normalize_locale
+# ●=string@80
+A9ftw-=Invalid language format. Please re-enter (e.g., en_US | en_US.UTF-8)
+# ●=string@91
+B8NX--=Not in the locale list. Please re-enter (check [ locale -a ])
+# ◆=reset_language
+# ●=_mf@115
+Bi83a8=Set shell language (Default = {}): 
+# ◆=reset_user_locale
+# ●=_mf@210
+D6CXuV=Change {} language from [{}] to [{}]?
+
 # ■=lib/msg_handler.sh
 # ◆=msg_parse_param
-# ●=error]:@345
+# ●=error]:@344
 B8f7ce=>&2
 
 # ■=lib/network.sh
 # ◆=count_down
-# ●=info@24
+# ●=info@34
 BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
-# ●=exiterr@39
+# ●=exiterr@49
 B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-# ●=exiterr@65
+# ●=exiterr@75
 CiQhsW=连接激活失败，请检查网络并尝试重新连接
+# ◆=comment_ifupdown
+# ●=info@92
+CEr0rv=comment {} in {}
+# ◆=setup_systemd_networkd
+# ●=info@128
+Bs8Bxe=add new config file {}
 # ◆=config_default
-# ●=exiterr@147
+# ●=exiterr@176
 CcDg5_=错误：systemd-networkd 未安装或不可用
-# ●=exiterr@155
+# ●=exiterr@184
 AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
+# ◆=network_config
+# ●=info@194
+C1n7FE=NetworkManager is running (systemctl status NetworkManager)
+# ●=info@197
+DSEEUY=ifupdown is running (systemctl status networking)
+# ●=info@200
+DdVMc5=wicked is running (systemctl status wicked)
+# ●=info@203
+CbKEUc=network-scripts is running (systemctl status network)
+# ●=info@207
+DUEmDt=systemd-networkd is running (systemctl status systemd-networkd)
+# ●=exiterr@210
+DS2AXc=未知网络管理器，无法配置静态IP
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-# ●=exiterr@48
-A-fT9S=不支持的架构: $arch
+# ●=exiterr@51
+AM9k6I=Unsupported architecture: {}
 # ◆=get_python_url
-# ●=exiterr@67
-B-i4aq=不支持的系统类型: $system_type
+# ●=exiterr@69
+BlWk8P=Unsupported system type: {}
 # ◆=on_exit
-# ●=warning@107
-Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
+# ●=warning@108
+DAV8e8=Interrupt detected, terminating background download process (PID={}...)
 # ◆=smart_geturl
-# ●=string@181
-BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-# ●=string@189
-Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
+# ●=error@80
+CcZPFX=Usage: smart_geturl <output_file> <URL>
+# ●=error@91
+CxZTTU=Neither wget nor curl is installed on the system, unable to download.
+# ●=_mf@96
+DLuT5a=Starting download
+# ●=_mf@97
+CKMRMM=Start time
+# ●=_mf@182
+AOGJnE=Size
+# ●=_mf@182
+DnoT0H=Average
+# ●=_mf@185
+Dj_fn5=Waiting for file creation...
+# ●=_mf@190
+CxdIB-=Elapsed Time
+# ●=_mf@217
+BwEPPV=Download complete! File size
+# ●=_mf@219
+AN6lkx=Download failed
 # ◆=install_py_standalone
-# ●=info@229
-AatL4G=下载 Python {} standalone...
-# ●=info@234
-BA8WYI=安装 Python 到 {}...
-# ●=exiterr@237
-CSK2Yu=解压安装失败
+# ●=info@230
+Cr3-oJ=Downloading Python {} standalone...
+# ●=info@235
+DnuwZu=Installing Python to {}...
+# ●=exiterr@238
+B62oO-=Extraction and installation failed
 # ◆=install_py_bin
-# ●=info@254
-DkUaTG=Python $PY_VERSION 安装完成！
-# ●=exiterr@257
-CCX9mW=Python $PY_VERSION 安装失败: $local_bin 不存在或不可执行
+# ●=info@255
+D6gi9o=Python {} installation completed!
+# ●=exiterr@258
+DfZCnc=Python {} installation failed: {} does not exist or is not executable
 # ◆=install_py_venv
-# ●=string@270
-AJFZ9U=当前pip镜像: {}
-# ●=info@276
-e01fce491d9e2428782cc71c377b9060=删除虚拟环境 $VENV_DIR...
-# ●=info@285
-80ef6c26b08f4a9924ce302ea8bf3a14=创建虚拟环境 $VENV_DIR...
-# ●=success@287
-ClGJXq=虚拟环境创建成功！
-# ●=exiterr@290
-AXm5nN=创建虚拟环境失败
+# ●=_mf@267
+Djzzvr=Virtual environment {} already exists. Delete and reinstall it?
+# ●=_mf@273
+C_9sLZ=Current pip mirror:
+# ●=_mf@275
+BJVBQG={}Reinstall pip and the required Python libraries?
+# ●=_mf@276
+AoE5L8=Skipping virtual environment creation
+# ●=info@279
+6bcebee3496f45cc552aa606f8112a2d=Deleting virtual environment {}...
+# ●=info@288
+96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
+# ●=success@290
+DC8V8Z=Virtual environment created successfully
+# ●=exiterr@293
+DqRJ9Y=Failed to create virtual environment
+# ◆=configure_pip
+# ●=_mf@328
+B4r_eA=Pip has been configured to use the new mirror
+# ●=_mf@329
+AoQOEG=Mirror
+# ●=_mf@330
+Bovsx6=Trusted Host
+# ◆=upgrade_pip
+# ●=string@337
+CwLYOz=[INFO] pip upgrade success
+# ●=string@339
+B2bNpx=[ERROR] pip upgrade failure
+# ◆=install_packages
+# ●=string@356
+BYm_0S=[INFO] {} install success
+# ●=string@358
+D9pnHg=[ERROR] {} install failure
+# ◆=show_pip_mirrors
+# ●=_mf@390
+C6JrUi=Index
+# ●=_mf@390
+B5VRns=Mirror Name
+# ●=_mf@390
+AT1vWp=URL Address
+# ●=_mf@390
+AOKnr4=Time
+# ●=_mf@404
+BrbGjI=Fastest Mirror
+# ●=_mf@406
+BMhBIw=Response Time
+# ●=_mf@412
+BclW-G=Failed Mirrors
+# ●=_mf@424
+AOlJ5P=Status
+# ●=error)@433
+CxIku0=Error
+# ◆=choose_pip_mirror
+# ●=string@450
+D1ECQr=\n⚠️  No available mirrors found. Please check your network connection.
+# ●=_mf@455
+CIq9J2=Please select a mirror to use. Enter 0 to skip
+# ●=string@459
+Dz9vrd=Configuration canceled. Keeping current settings
+# ●=string@477
+BzTGZo=[ERROR] Invalid input! Please enter a number between 0 and {}.
+# ◆=create_py_venv
+# ●=_mf@489
+DLX7Eq=Testing global pip mirror speeds...
 # ◆=main
-# ●=info@395
+# ●=info@521
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
@@ -256,7 +345,7 @@ CprXXr=错误: SSH配置文件 {} 不存在
 DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
 # ●=_mf@110
 B_09im=输入新的SSH端口 (当前: {}): 
-# ●=_mf@121
+# ●=string@121
 DZ4Zcf=\n操作已取消
 
 # ■=python/file_util.py
@@ -292,7 +381,7 @@ BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-# ●=string@72
+# ●=_mf@72
 A7XPUC={0} 语言文件不存在
 # ◆=get_lang_files
 # ●=exiterr@119
@@ -301,17 +390,17 @@ DPIGII=请先添加语言文件
 # ●=info@152
 Aw3y8l={0} 语言文件已创建
 # ◆=add_lang_files
-# ●=string@167
+# ●=_mf@167
 CEjzNC=确定要新增 {0} 语言文件吗?
-# ●=string@168
+# ●=_mf@168
 CZD3vP=操作已取消，未增加 {0} 文件文件
 # ◆=do_del_lang_files
 # ●=info@192
 Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
-# ●=string@204
+# ●=_mf@204
 B0BXr_=确定要删除 {0} 语言文件吗?
-# ●=string@205
+# ●=_mf@205
 C7-6zR=操作已取消，文件未删除
 
 # ■=python/mirror/linux_speed.py
@@ -325,13 +414,13 @@ BjJxaz=Invalid input! Please enter a number
 # ◆=setup_octet
 # ●=_mf@137
 AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]: 
-# ●=_mf@141
+# ●=string@141
 CXjGI-=请输入数字
-# ●=_mf@146
+# ●=string@146
 CtqJsG=输入必须在 1~255 之间
-# ●=_mf@150
+# ●=string@150
 Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
-# ●=_mf@159
+# ●=string@159
 DZ4Zcf=\n操作已取消
 # ◆=fix_ip
 # ●=info@180
@@ -351,7 +440,7 @@ B657zX=User chose not to modify the network configuration
 CPcmGT=操作已取消
 # ●=_mf@61
 Bw0U--=输入错误，请输入 Y 或 N
-# ●=_mf@98
+# ●=string@98
 B8V-HW=输入处理出错: {}
 # ◆=install_packages
 # ●=info@252
