增加license信息，msg_handler.sh中bug fix

--- a/config/lang/.en.properties
+++ b/config/lang/.en.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="Initialize script language (default={}): "
 INIT_SYSTEM_START="Initialize system start"
 INIT_SYSTEM_END="Initialize system end"
 INIT_LINUX_UNSUPPORT="Unsupported Linux distribution"
-# init_phrase
-CMD_UPGRADE="Upgrade"
-CMD_INSTALL="Install"
-CMD_SUCCESS="Success"
-CMD_FAILURE="Failure"
+# version claim
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Licensed under GPL v3. This is free software with ABSOLUTELY NO WARRANTY."
 # msg_handler
 MSG_ERROR="ERROR"
 MSG_SUCCESS="SUCCESS"
