--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="Initialiser la langue du script (par défaut={}): "
 INIT_SYSTEM_START="Initialiser le démarrage du système"
 INIT_SYSTEM_END="Initialiser la fin du système"
 INIT_LINUX_UNSUPPORT="Distribution Linux non prise en charge"
-# init_phrase
-CMD_UPGRADE="Mettre à jour"
-CMD_INSTALL="Installer"
-CMD_SUCCESS="Réussi"
-CMD_FAILURE="Échoué"
+# version claim
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Sous licence GPL v3. Ce logiciel est gratuit et sans AUCUNE GARANTIE."
 # msg_handler
 MSG_ERROR="Erreur"
 MSG_SUCCESS="Succès"
