--- a/config/lang/.zh.properties
+++ b/config/lang/.zh.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="初始化脚本语言(默认={}): "
 INIT_SYSTEM_START="初始化系统启动"
 INIT_SYSTEM_END="初始化系统结束"
 INIT_LINUX_UNSUPPORT="不支持的Linux发行版"
-# init_phrase
-CMD_UPGRADE="升级"
-CMD_INSTALL="安装"
-CMD_SUCCESS="成功"
-CMD_FAILURE="失败"
+# version claim
+VERSION_CLAIM="{0} - 版权所有 (C) {1} {2}\n\
+根据 GPL v3 授权。这是完全没有任何担保的免费软件。"
 # msg_handler
 MSG_ERROR="错误"
 MSG_SUCCESS="成功"
