--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="初始化脚本語言(預設={}): "
 INIT_SYSTEM_START="初始化系統啟動"
 INIT_SYSTEM_END="初始化系統結束"
 INIT_LINUX_UNSUPPORT="不支援的Linux發行版"
-# init_phrase
-CMD_UPGRADE="升級"
-CMD_INSTALL="安裝"
-CMD_SUCCESS="成功"
-CMD_FAILURE="失敗"
+# version claim
+VERSION_CLAIM="{0} - 版權所有 (C) {1} {2}\n\
+根據 GPL v3 授權。這是完全沒有任何擔保的免費軟體。"
 # msg_handler
 MSG_ERROR="錯誤"
 MSG_SUCCESS="成功"
