--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
 INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
-# init_phrase
-CMD_UPGRADE="Aktualisieren"
-CMD_INSTALL="Installieren"
-CMD_SUCCESS="Erfolgreich"
-CMD_FAILURE="Fehlgeschlagen"
+# version claim
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Lizenziert unter GPL v3. Dies ist freie Software ohne jegliche Garantie."
 # msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
