--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -5,11 +5,9 @@ INIT_SHELL_LANG="Inicializar el idioma del script (predeterminado={}): "
 INIT_SYSTEM_START="Iniciar el sistema"
 INIT_SYSTEM_END="Finalizar el sistema"
 INIT_LINUX_UNSUPPORT="Distribución de Linux no compatible"
-# init_phrase
-CMD_UPGRADE="Actualizar"
-CMD_INSTALL="Instalar"
-CMD_SUCCESS="Éxito"
-CMD_FAILURE="Fallo"
+# version claim
+VERSION_CLAIM="{0} - Copyright (C) {1} {2}\n\
+Licenciado bajo GPL v3. Este es un software libre SIN NINGUNA GARANTÍA."
 # msg_handler
 MSG_ERROR="Error"
 MSG_SUCCESS="Éxito"
