翻译中英文

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -263,54 +263,53 @@ AoE5L8=Skipping virtual environment creation
 DC8V8Z=Virtual environment created successfully
 # ●=exiterr@293
 DqRJ9Y=Failed to create virtual environment
-# ◆=configure_pip
-# ●=_mf@328
-B4r_eA=Pip has been configured to use the new mirror
-# ●=_mf@329
-AoQOEG=Mirror
-# ●=_mf@330
-Bovsx6=Trusted Host
 # ◆=upgrade_pip
-# ●=string@337
+# ●=string@309
 CwLYOz=[INFO] pip upgrade success
-# ●=string@339
+# ●=string@311
 B2bNpx=[ERROR] pip upgrade failure
 # ◆=install_packages
-# ●=string@356
+# ●=string@328
 BYm_0S=[INFO] {} install success
-# ●=string@358
+# ●=string@330
 D9pnHg=[ERROR] {} install failure
 # ◆=show_pip_mirrors
-# ●=_mf@390
+# ●=_mf@362
 C6JrUi=Index
-# ●=_mf@390
+# ●=_mf@362
 B5VRns=Mirror Name
-# ●=_mf@390
+# ●=_mf@362
 AT1vWp=URL Address
-# ●=_mf@390
+# ●=_mf@362
 AOKnr4=Time
-# ●=_mf@404
+# ●=_mf@376
 BrbGjI=Fastest Mirror
-# ●=_mf@406
+# ●=_mf@378
 BMhBIw=Response Time
-# ●=_mf@412
+# ●=_mf@384
 BclW-G=Failed Mirrors
-# ●=_mf@424
+# ●=_mf@396
 AOlJ5P=Status
 # ◆=choose_pip_mirror
-# ●=string@450
-D1ECQr=\n⚠️  No available mirrors found. Please check your network connection.
-# ●=_mf@455
+# ●=warning@423
+D1ECQh=No available mirrors found. Please check your network connection.
+# ●=_mf@428
 CIq9J2=Please select a mirror to use. Enter 0 to skip
-# ●=string@459
+# ●=string@432
 Dz9vrd=Configuration canceled. Keeping current settings
-# ●=string@477
+# ●=_mf@459
+B4r_eA=Pip has been configured to use the new mirror
+# ●=_mf@460
+AoQOEG=Mirror
+# ●=_mf@461
+Bovsx6=Trusted Host
+# ●=string@467
 BzTGZo=[ERROR] Invalid input! Please enter a number between 0 and {}.
 # ◆=create_py_venv
-# ●=_mf@490
+# ●=_mf@481
 DLX7Eq=Testing global pip mirror speeds...
 # ◆=main
-# ●=info@522
+# ●=info@512
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
@@ -397,11 +396,34 @@ B0BXr_=确定要删除 {0} 语言文件吗?
 C7-6zR=操作已取消，文件未删除
 
 # ■=python/mirror/linux_speed.py
+# ◆=fetch_mirror_list
+# ●=string@97
+B6R_HD={} Mirror Speed Testing Tool
+# ●=string@108
+AeQJal=Failed to fetch the mirror list: {}
+# ◆=test_all_mirrors
+# ●=string@211
+CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
+# ●=string@273
+AvNok2=Ctrl+C detected, stopping remaining tasks...
+# ●=string@293
+C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=choose_mirror
-# ●=error@345
-Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
-# ●=error@349
+# ●=error@350
+CvE-z3=Invalid input! Please enter a number between 0-{}
+# ●=error@354
 BjJxaz=Invalid input! Please enter a number
+# ◆=run
+# ●=string@380
+Dsnlq3=Could not find the {} source configuration file
+# ●=_mf@384
+AD12ND=Would you like to reselect a mirror?
+# ●=_mf@386
+Ap74Rf=Currently selected mirror
+# ●=string@395
+D4jlM5=An error occurred during program execution: {}
+# ●=_mf@403
+AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/network_util.py
 # ◆=setup_octet
