--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -169,10 +169,6 @@ AoE5L8=Skipping virtual environment creation
 96f72e8313838714d9e659fde4fd343c=Creating virtual environment {}...
 DC8V8Z=Virtual environment created successfully
 DqRJ9Y=Failed to create virtual environment
-# ◆=configure_pip
-B4r_eA=Pip has been configured to use the new mirror
-AoQOEG=Mirror
-Bovsx6=Trusted Host
 # ◆=upgrade_pip
 CwLYOz=[INFO] pip upgrade success
 B2bNpx=[ERROR] pip upgrade failure
@@ -189,9 +185,12 @@ BMhBIw=Response Time
 BclW-G=Failed Mirrors
 AOlJ5P=Status
 # ◆=choose_pip_mirror
-D1ECQr=\n⚠️  No available mirrors found. Please check your network connection.
+D1ECQh=No available mirrors found. Please check your network connection.
 CIq9J2=Please select a mirror to use. Enter 0 to skip
 Dz9vrd=Configuration canceled. Keeping current settings
+B4r_eA=Pip has been configured to use the new mirror
+AoQOEG=Mirror
+Bovsx6=Trusted Host
 BzTGZo=[ERROR] Invalid input! Please enter a number between 0 and {}.
 # ◆=create_py_venv
 DLX7Eq=Testing global pip mirror speeds...
@@ -251,9 +250,22 @@ B0BXr_=确定要删除 {0} 语言文件吗?
 C7-6zR=操作已取消，文件未删除
 
 # ■=python/mirror/linux_speed.py
+# ◆=fetch_mirror_list
+B6R_HD={} Mirror Speed Testing Tool
+AeQJal=Failed to fetch the mirror list: {}
+# ◆=test_all_mirrors
+CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
+AvNok2=Ctrl+C detected, stopping remaining tasks...
+C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=choose_mirror
-Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
+CvE-z3=Invalid input! Please enter a number between 0-{}
 BjJxaz=Invalid input! Please enter a number
+# ◆=run
+Dsnlq3=Could not find the {} source configuration file
+AD12ND=Would you like to reselect a mirror?
+Ap74Rf=Currently selected mirror
+D4jlM5=An error occurred during program execution: {}
+AiVn1Y=Would you like to upgrade the packages immediately?
 
 # ■=python/network_util.py
 # ◆=setup_octet
