--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -169,10 +169,6 @@ AoE5L8=跳过虚拟环境创建
 96f72e8313838714d9e659fde4fd343c=创建虚拟环境 {}...
 DC8V8Z=虚拟环境创建成功
 DqRJ9Y=虚拟环境创建失败
-# ◆=configure_pip
-B4r_eA=已配置 pip 使用新的镜像
-AoQOEG=镜像
-Bovsx6=信任主机
 # ◆=upgrade_pip
 CwLYOz=[信息] pip 升级成功
 B2bNpx=[错误] pip 升级失败
@@ -189,9 +185,12 @@ BMhBIw=响应时间
 BclW-G=失败的镜像
 AOlJ5P=状态
 # ◆=choose_pip_mirror
-D1ECQr=\n⚠️  没有找到可用的镜像，请检查网络连接
+D1ECQh=没有找到可用的镜像，请检查网络连接
 CIq9J2=请选择要使用的镜像，输入 0 表示不更改
 Dz9vrd=已取消配置，保持当前设置
+B4r_eA=已配置 pip 使用新的镜像
+AoQOEG=镜像
+Bovsx6=信任主机
 BzTGZo=[错误] 输入错误！请输入 0-{} 之间的数字
 # ◆=create_py_venv
 DLX7Eq=测试全球 pip 可用镜像速度...
@@ -251,9 +250,22 @@ B0BXr_=确定要删除 {0} 语言文件吗?
 C7-6zR=操作已取消，文件未删除
 
 # ■=python/mirror/linux_speed.py
+# ◆=fetch_mirror_list
+B6R_HD={} 镜像速度测试工具
+AeQJal=获取镜像列表失败: {}
+# ◆=test_all_mirrors
+CCfiT5=开始测试 {} 个镜像，筛选前 {} 个最快镜像，请稍候...
+AvNok2=检测到 Ctrl+C，停止剩余任务...
+C7KC11=找到前{}个最快的{}镜像 (共耗时{}秒)
 # ◆=choose_mirror
-Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
-BjJxaz=Invalid input! Please enter a number
+CvE-z3=无效输入！请输入 0-{} 之间的数字
+BjJxaz=无效输入！请输入一个数字
+# ◆=run
+Dsnlq3=没有找到 {} 源配置文件
+AD12ND=是否重新选择镜像?
+Ap74Rf=已选镜像
+D4jlM5=程序运行出错: {}
+AiVn1Y=是否立刻升级软件包?
 
 # ■=python/network_util.py
 # ◆=setup_octet
