函数结束条件的bug fix

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -404,6 +404,8 @@ AeQJal=Failed to fetch the mirror list: {}
 # ◆=test_all_mirrors
 # ●=string@211
 CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
+# ●=_mf@237
+DnXJti=Progress
 # ●=string@273
 AvNok2=Ctrl+C detected, stopping remaining tasks...
 # ●=string@293
