--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -255,6 +255,7 @@ B6R_HD={} Mirror Speed Testing Tool
 AeQJal=Failed to fetch the mirror list: {}
 # ◆=test_all_mirrors
 CCfiT5=Starting to test {} mirrors, filtering the top {} fastest mirrors, please wait...
+DnXJti=Progress
 AvNok2=Ctrl+C detected, stopping remaining tasks...
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=choose_mirror
