--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -255,6 +255,7 @@ B6R_HD={} 镜像速度测试工具
 AeQJal=获取镜像列表失败: {}
 # ◆=test_all_mirrors
 CCfiT5=开始测试 {} 个镜像，筛选前 {} 个最快镜像，请稍候...
+DnXJti=进度
 AvNok2=检测到 Ctrl+C，停止剩余任务...
 C7KC11=找到前{}个最快的{}镜像 (共耗时{}秒)
 # ◆=choose_mirror
