翻译中英文

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -313,21 +313,38 @@ DLX7Eq=Testing global pip mirror speeds...
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
+# ◆=cmd_exec
+# ●=_mf@60
+Cswzs3=[ERROR] Command execution timeout: {}
+# ●=_mf@64
+CWE0RS=[ERROR] Command execution error: {}
+# ◆=cmd_ex_be
+# ●=_mf@128
+D69JIa=Executing
+# ◆=monitor_progress
+# ●=string@166
+ATkIIM=Monitoring process {}...
+# ●=_mf@212
+APOzfr=Completed
+# ●=_mf@220
+DOkop1=Ctrl+C detected, terminating background subprocesses...
+# ●=string@226
+CWtyq8=Script interrupted and subprocesses cleaned up
 # ◆=pm_refresh
-# ●=info@248
-BbYPmF=正在刷新缓存...
-# ●=info@252
-CHUbDk=缓存刷新完成
+# ●=string@249
+BeW7RD=Refreshing cache...
+# ●=info@253
+Aq5CFQ=Cache refresh completed
 # ◆=pm_upgrade
-# ●=info@266
-A0xBLs=正在更新系统...
-# ●=info@270
-AZPBHL=更新系统完成
+# ●=string@267
+Cq_00C=Updating system...
+# ●=info@271
+D2hEpl=System update completed
 # ◆=pm_install
-# ●=info@287
-BG78fD=正在安装{}...
-# ●=info@291
-CXrh40=安装{}完成
+# ●=string@288
+BQmsyM=Installing {}...
+# ●=info@292
+DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
 # ◆=config_sshd
@@ -373,27 +390,31 @@ BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-# ●=_mf@72
-A7XPUC={0} 语言文件不存在
+# ●=exiterr@73
+CtfOM-=Invalid mode parameter {}
+# ●=_mf@79
+DLHmOZ={0} Language file already exists
+# ●=_mf@80
+AlJdHf={0} Language file does not exist
 # ◆=get_lang_files
-# ●=exiterr@119
-DPIGII=请先添加语言文件
+# ●=exiterr@126
+BxsVtk=Please add the language file first
 # ◆=do_add_lang_files
-# ●=info@152
-Aw3y8l={0} 语言文件已创建
+# ●=info@151
+AI4IHR={0} Language file has been created
 # ◆=add_lang_files
+# ●=_mf@166
+B04JoX=Are you sure to create the {0} language file?
 # ●=_mf@167
-CEjzNC=确定要新增 {0} 语言文件吗?
-# ●=_mf@168
-CZD3vP=操作已取消，未增加 {0} 文件文件
+AZCzV1=Action cancelled. The {0} file was not created
 # ◆=do_del_lang_files
-# ●=info@192
-Aw30Tu={0} 语言文件已删除
+# ●=info@191
+A4CItw={0} Language file has been deleted
 # ◆=del_lang_files
-# ●=_mf@204
-B0BXr_=确定要删除 {0} 语言文件吗?
+# ●=_mf@203
+CwGdLu=Are you sure to delete the {0} language file?
 # ●=_mf@205
-C7-6zR=操作已取消，文件未删除
+Be_6w4=Action cancelled. File deletion aborted
 
 # ■=python/mirror/linux_speed.py
 # ◆=fetch_mirror_list
@@ -411,21 +432,51 @@ AvNok2=Ctrl+C detected, stopping remaining tasks...
 # ●=string@293
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=choose_mirror
-# ●=error@350
+# ●=string@320
+CCGCmP=No available mirrors found
+# ●=string@328
+Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
+# ●=_mf@329
+BiFkf4=Please enter your choice (0-{}): 
+# ●=string@335
+DhCuAq=Configuration cancelled, keeping current settings
+# ●=_mf@345
+Cph1R3=You selected
+# ●=_mf@346
+C68uzc=Download speed
+# ●=error@352
 CvE-z3=Invalid input! Please enter a number between 0-{}
-# ●=error@354
+# ●=error@356
 BjJxaz=Invalid input! Please enter a number
+# ◆=print_results
+# ●=_mf@368
+CCoL8z=排名
+# ●=_mf@368
+AmHqF-=速度(KB/s)
+# ●=_mf@368
+CCqAV3=响应时间(s)
+# ●=_mf@368
+DHzpqW=成功率
+# ●=_mf@368
+DPaV3j=国家/地区
+# ●=_mf@368
+C_j0ry=镜像URL
 # ◆=run
-# ●=string@380
+# ●=string@384
 Dsnlq3=Could not find the {} source configuration file
-# ●=_mf@384
+# ●=_mf@388
 AD12ND=Would you like to reselect a mirror?
-# ●=_mf@386
+# ●=_mf@390
 Ap74Rf=Currently selected mirror
-# ●=string@395
+# ●=string@399
 D4jlM5=An error occurred during program execution: {}
-# ●=_mf@403
+# ●=_mf@407
 AiVn1Y=Would you like to upgrade the packages immediately?
+
+# ■=python/mirror/linux_speed_arch.py
+# ◆=choose_mirror
+# ●=_mf@132
+CMsLwX=Do you want to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
