--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -198,15 +198,25 @@ DLX7Eq=Testing global pip mirror speeds...
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
+# ◆=cmd_exec
+Cswzs3=[ERROR] Command execution timeout: {}
+CWE0RS=[ERROR] Command execution error: {}
+# ◆=cmd_ex_be
+D69JIa=Executing
+# ◆=monitor_progress
+ATkIIM=Monitoring process {}...
+APOzfr=Completed
+DOkop1=Ctrl+C detected, terminating background subprocesses...
+CWtyq8=Script interrupted and subprocesses cleaned up
 # ◆=pm_refresh
-BbYPmF=正在刷新缓存...
-CHUbDk=缓存刷新完成
+BeW7RD=Refreshing cache...
+Aq5CFQ=Cache refresh completed
 # ◆=pm_upgrade
-A0xBLs=正在更新系统...
-AZPBHL=更新系统完成
+Cq_00C=Updating system...
+D2hEpl=System update completed
 # ◆=pm_install
-BG78fD=正在安装{}...
-CXrh40=安装{}完成
+BQmsyM=Installing {}...
+DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
 # ◆=config_sshd
@@ -235,19 +245,21 @@ BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-A7XPUC={0} 语言文件不存在
+CtfOM-=Invalid mode parameter {}
+DLHmOZ={0} Language file already exists
+AlJdHf={0} Language file does not exist
 # ◆=get_lang_files
-DPIGII=请先添加语言文件
+BxsVtk=Please add the language file first
 # ◆=do_add_lang_files
-Aw3y8l={0} 语言文件已创建
+AI4IHR={0} Language file has been created
 # ◆=add_lang_files
-CEjzNC=确定要新增 {0} 语言文件吗?
-CZD3vP=操作已取消，未增加 {0} 文件文件
+B04JoX=Are you sure to create the {0} language file?
+AZCzV1=Action cancelled. The {0} file was not created
 # ◆=do_del_lang_files
-Aw30Tu={0} 语言文件已删除
+A4CItw={0} Language file has been deleted
 # ◆=del_lang_files
-B0BXr_=确定要删除 {0} 语言文件吗?
-C7-6zR=操作已取消，文件未删除
+CwGdLu=Are you sure to delete the {0} language file?
+Be_6w4=Action cancelled. File deletion aborted
 
 # ■=python/mirror/linux_speed.py
 # ◆=fetch_mirror_list
@@ -259,14 +271,31 @@ DnXJti=Progress
 AvNok2=Ctrl+C detected, stopping remaining tasks...
 C7KC11=Found top {} fastest {} mirrors (total time: {} seconds)
 # ◆=choose_mirror
+CCGCmP=No available mirrors found
+Dzjmam=Please select a mirror to use (1-{}), enter 0 to keep current settings
+BiFkf4=Please enter your choice (0-{}):
+DhCuAq=Configuration cancelled, keeping current settings
+Cph1R3=You selected
+C68uzc=Download speed
 CvE-z3=Invalid input! Please enter a number between 0-{}
 BjJxaz=Invalid input! Please enter a number
+# ◆=print_results
+CCoL8z=排名
+AmHqF-=速度(KB/s)
+CCqAV3=响应时间(s)
+DHzpqW=成功率
+DPaV3j=国家/地区
+C_j0ry=镜像URL
 # ◆=run
 Dsnlq3=Could not find the {} source configuration file
 AD12ND=Would you like to reselect a mirror?
 Ap74Rf=Currently selected mirror
 D4jlM5=An error occurred during program execution: {}
 AiVn1Y=Would you like to upgrade the packages immediately?
+
+# ■=python/mirror/linux_speed_arch.py
+# ◆=choose_mirror
+CMsLwX=Do you want to switch to the new mirror list?
 
 # ■=python/network_util.py
 # ◆=setup_octet
