--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,7 +9,7 @@
 config:
   project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-06-30 20:34:26'
+  changed: '2025-06-30 23:03:11'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -27,14 +27,14 @@ config:
     python: py
   stats: # auto-generated, DO NOT UPDATE
     file_nos: 51
-    zh: {count: 195}
-    en: {count: 195}
+    zh: {count: 217}
+    en: {count: 217}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -58,7 +58,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 4, start: 53, end: 59}
       en: {count: 4, start: 53, end: 59}
@@ -66,7 +66,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 7, start: 61, end: 77}
       en: {count: 7, start: 61, end: 77}
@@ -74,7 +74,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 9, start: 79, end: 91}
       en: {count: 9, start: 79, end: 91}
@@ -82,7 +82,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 3, start: 93, end: 97}
       en: {count: 3, start: 93, end: 97}
@@ -90,7 +90,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 2, start: 99, end: 103}
       en: {count: 2, start: 99, end: 103}
@@ -98,7 +98,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 1, start: 105, end: 107}
       en: {count: 1, start: 105, end: 107}
@@ -106,7 +106,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-06-29 20:42:17'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 4, start: 109, end: 116}
       en: {count: 4, start: 109, end: 116}
@@ -114,7 +114,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 13, start: 118, end: 137}
       en: {count: 13, start: 118, end: 137}
@@ -122,7 +122,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
       zh: {count: 47, start: 139, end: 199}
       en: {count: 47, start: 139, end: 199}
@@ -130,34 +130,34 @@ file:
     type: python
     djb2_len: 20
     created: '2025-06-24 19:02:02'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 6, start: 201, end: 210}
-      en: {count: 6, start: 201, end: 210}
+      zh: {count: 13, start: 201, end: 220}
+      en: {count: 13, start: 201, end: 220}
   python/config_sshd.py:
     type: python
     djb2_len: 20
     created: '2025-06-27 19:16:58'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 4, start: 212, end: 217}
-      en: {count: 4, start: 212, end: 217}
+      zh: {count: 4, start: 222, end: 227}
+      en: {count: 4, start: 222, end: 227}
   python/file_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 13, start: 219, end: 235}
-      en: {count: 13, start: 219, end: 235}
+      zh: {count: 13, start: 229, end: 245}
+      en: {count: 13, start: 229, end: 245}
   python/i18n.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 8, start: 237, end: 251}
-      en: {count: 8, start: 237, end: 251}
+      zh: {count: 10, start: 247, end: 263}
+      en: {count: 10, start: 247, end: 263}
   python/lang_server.py:
     type: python
     djb2_len: 20
@@ -178,31 +178,39 @@ file:
     type: python
     djb2_len: 20
     created: '2025-06-27 11:29:05'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 13, start: 253, end: 270}
-      en: {count: 13, start: 253, end: 270}
+      zh: {count: 25, start: 265, end: 295}
+      en: {count: 25, start: 265, end: 295}
+  python/mirror/linux_speed_arch.py:
+    type: python
+    djb2_len: 20
+    created: '2025-06-30 23:02:22'
+    changed: '2025-06-30 23:03:11'
+    stats:
+      zh: {count: 1, start: 297, end: 299}
+      en: {count: 1, start: 297, end: 299}
   python/network_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 18:20:21'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 10, start: 272, end: 284}
-      en: {count: 10, start: 272, end: 284}
+      zh: {count: 10, start: 301, end: 313}
+      en: {count: 10, start: 301, end: 313}
   python/system.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 6, start: 286, end: 294}
-      en: {count: 6, start: 286, end: 294}
+      zh: {count: 6, start: 315, end: 323}
+      en: {count: 6, start: 315, end: 323}
   python/test_lang.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-30 20:35:34'
+    changed: '2025-06-30 23:03:11'
     stats:
-      zh: {count: 2, start: 296, end: 301}
-      en: {count: 2, start: 296, end: 301}
+      zh: {count: 2, start: 325, end: 330}
+      en: {count: 2, start: 325, end: 330}
