--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -198,15 +198,25 @@ DLX7Eq=测试全球 pip 可用镜像速度...
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
+# ◆=cmd_exec
+Cswzs3=[ERROR] 命令执行超时: {}
+CWE0RS=[ERROR] 命令执行异常: {}
+# ◆=cmd_ex_be
+D69JIa=执行
+# ◆=monitor_progress
+ATkIIM=监控进程 {}...
+APOzfr=完成
+DOkop1=检测到 Ctrl+C，正在终止后台子进程...
+CWtyq8=脚本已中断并清理子进程
 # ◆=pm_refresh
-BbYPmF=正在刷新缓存...
-CHUbDk=缓存刷新完成
+BeW7RD=正在刷新缓存...
+Aq5CFQ=缓存刷新完成
 # ◆=pm_upgrade
-A0xBLs=正在更新系统...
-AZPBHL=更新系统完成
+Cq_00C=正在更新系统...
+D2hEpl=更新系统完成
 # ◆=pm_install
-BG78fD=正在安装{}...
-CXrh40=安装{}完成
+BQmsyM=正在安装{}...
+DE4sbC=安装{}完成
 
 # ■=python/config_sshd.py
 # ◆=config_sshd
@@ -235,19 +245,21 @@ BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-A7XPUC={0} 语言文件不存在
+CtfOM-=模式参数错误: {}
+DLHmOZ={0} 语言文件已存在
+AlJdHf={0} 语言文件不存在
 # ◆=get_lang_files
-DPIGII=请先添加语言文件
+BxsVtk=请先添加语言文件
 # ◆=do_add_lang_files
-Aw3y8l={0} 语言文件已创建
+AI4IHR={0} 语言文件已创建
 # ◆=add_lang_files
-CEjzNC=确定要新增 {0} 语言文件吗?
-CZD3vP=操作已取消，未增加 {0} 文件文件
+B04JoX=确定要新增 {0} 语言文件吗?
+AZCzV1=操作已取消，未增加 {0} 文件
 # ◆=do_del_lang_files
-Aw30Tu={0} 语言文件已删除
+A4CItw={0} 语言文件已删除
 # ◆=del_lang_files
-B0BXr_=确定要删除 {0} 语言文件吗?
-C7-6zR=操作已取消，文件未删除
+CwGdLu=确定要删除 {0} 语言文件吗?
+Be_6w4=操作已取消，文件未删除
 
 # ■=python/mirror/linux_speed.py
 # ◆=fetch_mirror_list
@@ -259,14 +271,31 @@ DnXJti=进度
 AvNok2=检测到 Ctrl+C，停止剩余任务...
 C7KC11=找到前{}个最快的{}镜像 (共耗时{}秒)
 # ◆=choose_mirror
+CCGCmP=没有找到可用的镜像
+Dzjmam=请选择要使用的镜像 (1-{})，输入 0 表示不更改
+BiFkf4=请输入选择 (0-{}):
+DhCuAq=已取消配置，保持当前设置
+Cph1R3=您选择了
+C68uzc=下载速度
 CvE-z3=无效输入！请输入 0-{} 之间的数字
 BjJxaz=无效输入！请输入一个数字
+# ◆=print_results
+CCoL8z=排名
+AmHqF-=速度(KB/s)
+CCqAV3=响应时间(s)
+DHzpqW=成功率
+DPaV3j=国家/地区
+C_j0ry=镜像URL
 # ◆=run
 Dsnlq3=没有找到 {} 源配置文件
 AD12ND=是否重新选择镜像?
 Ap74Rf=已选镜像
 D4jlM5=程序运行出错: {}
 AiVn1Y=是否立刻升级软件包?
+
+# ■=python/mirror/linux_speed_arch.py
+# ◆=choose_mirror
+CMsLwX=是否变更为新的镜像列表?
 
 # ■=python/network_util.py
 # ◆=setup_octet
