翻译中英文

--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -226,22 +226,26 @@ B_09im=输入新的SSH端口 (当前: {}):
 DZ4Zcf=\n操作已取消
 
 # ■=python/file_util.py
+# ◆=copy_file
+AlJdHZ=Source file does not exist
+Ds0-pw=Copy failed
 # ◆=file_backup_sj
-A-g65z=未指定需要备份的文件
-D1lk1B=未找到匹配 '{pattern}' 的文件
-Dxey7R=备份文件 {backup_file} 已存在，跳过
-CmH1ZD=已创建备份: {src_file} -> {backup_file}
-BCkZrE=无法创建备份文件 {backup_file}: {e}
-DvpZ6Q=重要文件无法备份
-DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
+AQSRB5=No files specified for backup
+AM2USl=No files found matching {}
+AUY1Id=Backup file {} already exists, skipping
+ArhIXB=Backup created
+C_iVzJ=Unable to create backup file
+DPb6VE=Important files cannot be backed up
+A5I7Z3=Backup completed: {} succeeded, {} skipped, {} failed
 # ◆=file_restore_sj
-BXScoo=备份文件 {backup_file} 不存在，还原失败
-CAUKNQ=已还原文件: {backup_file} -> {src_file}
-A3ECb6=无法创建备份文件 {src_file}: {e}
-DadsDq=还原文件：{src_file}
+Ay_Y2v=Backup file {} does not exist, restoration failed
+BT_Y36=File restored
 # ◆=write_source_file
-CoDUAv=已更新 source list: {path}
-BcWbv7=写入失败: {e}
+BJsNKb=source file updated: {}
+DNbAuh=Write failed
+# ◆=get_code_files
+DXNBr6=[Warning]: File does not exist
+Dpwver=[Error]: No shell script files found
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
@@ -280,12 +284,12 @@ C68uzc=Download speed
 CvE-z3=Invalid input! Please enter a number between 0-{}
 BjJxaz=Invalid input! Please enter a number
 # ◆=print_results
-CCoL8z=排名
-AmHqF-=速度(KB/s)
-CCqAV3=响应时间(s)
-DHzpqW=成功率
-DPaV3j=国家/地区
-C_j0ry=镜像URL
+AOAev1=Rank
+Ah5sGh=Speed(KB/s)
+CD_dye=Resp Time(s)
+A03XzI=Succ Rate
+CZk3S6=Country/Region
+AyPHP9=Mirror URL
 # ◆=run
 Dsnlq3=Could not find the {} source configuration file
 AD12ND=Would you like to reselect a mirror?
