--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -226,22 +226,26 @@ B_09im=输入新的SSH端口 (当前: {}):
 DZ4Zcf=\n操作已取消
 
 # ■=python/file_util.py
+# ◆=copy_file
+AlJdHZ=源文件不存在
+Ds0-pw=复制失败
 # ◆=file_backup_sj
-A-g65z=未指定需要备份的文件
-D1lk1B=未找到匹配 '{pattern}' 的文件
-Dxey7R=备份文件 {backup_file} 已存在，跳过
-CmH1ZD=已创建备份: {src_file} -> {backup_file}
-BCkZrE=无法创建备份文件 {backup_file}: {e}
-DvpZ6Q=重要文件无法备份
-DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
+AQSRB5=没有指定文件进行备份
+AM2USl=未找到匹配 {} 的文件
+AUY1Id=备份文件 {} 已存在，跳过
+ArhIXB=已创建备份
+C_iVzJ=无法创建备份文件
+DPb6VE=重要文件无法备份
+A5I7Z3=备份完成：成功 {} 个，跳过 {} 个，失败 {} 个
 # ◆=file_restore_sj
-BXScoo=备份文件 {backup_file} 不存在，还原失败
-CAUKNQ=已还原文件: {backup_file} -> {src_file}
-A3ECb6=无法创建备份文件 {src_file}: {e}
-DadsDq=还原文件：{src_file}
+Ay_Y2v=备份文件 {} 不存在，还原失败
+BT_Y36=已还原文件
 # ◆=write_source_file
-CoDUAv=已更新 source list: {path}
-BcWbv7=写入失败: {e}
+BJsNKb=已更新源文件: {}
+DNbAuh=写入失败
+# ◆=get_code_files
+DXNBr6=警告: 文件不存在
+Dpwver=Error: No shell script files found
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
@@ -280,12 +284,12 @@ C68uzc=下载速度
 CvE-z3=无效输入！请输入 0-{} 之间的数字
 BjJxaz=无效输入！请输入一个数字
 # ◆=print_results
-CCoL8z=排名
-AmHqF-=速度(KB/s)
-CCqAV3=响应时间(s)
-DHzpqW=成功率
-DPaV3j=国家/地区
-C_j0ry=镜像URL
+AOAev1=排名
+Ah5sGh=速度(KB/s)
+CD_dye=响应时间(s)
+A03XzI=成功率
+CZk3S6=国家/地区
+AyPHP9=镜像URL
 # ◆=run
 Dsnlq3=没有找到 {} 源配置文件
 AD12ND=是否重新选择镜像?
