翻译中英文

--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -51,9 +51,9 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=config_sshd
-CbkyTT=sshd 未安装，正在安装...
-B8B0b-=SSH 配置已生效
-AWNMMM=systemctl restart $ssh_service 失败，请手动执行
+Dj3cJb=sshd 未安装，正在安装...
+BLGrby=SSH 配置已生效
+Dq9sXa=systemctl restart {} 失败，请手动执行
 # ◆=install_docker
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
@@ -91,9 +91,12 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DvEyZZ=自动安装 '$lnx_cmd' ...
-BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
-CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
+DtZJ4v=自动安装 {} ...
+Ar7Pu3={} 安装失败，请手动安装，日志: {} [{}]
+Bg2ZYl={} 安装成功，日志: {} [{}]
+# ◆=monitor_progress
+ATkIIM=监控进程 {}...
+APOzfr=完成
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -219,11 +222,19 @@ BQmsyM=正在安装{}...
 DE4sbC=安装{}完成
 
 # ■=python/config_sshd.py
+# ◆=run_command
+DWA16R=执行命令失败: {}
 # ◆=config_sshd
-CprXXr=错误: SSH配置文件 {} 不存在
-DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
-B_09im=输入新的SSH端口 (当前: {}):
-DZ4Zcf=\n操作已取消
+BFAuER=错误: SSH配置文件 {} 不存在
+A7WXKO=已启动SSH (当前端口 {})，是否重新设置?
+DzCitM=输入新的SSH端口 (当前: {}):
+DZskNc=保持端口: {}
+CPPvBn=✓ 设置SSH端口: {}
+ARXwDM=✗ 设置SSH端口失败
+A2bCmM=\n操作已取消
+DfSYhJ=允许 root 远程登录?:
+CCxIZL=✓ 允许 root 登录
+BjKmh3=✓ 禁止 root 登录
 
 # ■=python/file_util.py
 # ◆=copy_file
