--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -51,9 +51,9 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=config_sshd
-CbkyTT=sshd 未安装，正在安装...
-B8B0b-=SSH 配置已生效
-AWNMMM=systemctl restart $ssh_service 失败，请手动执行
+Dj3cJb=sshd is not installed, installing now...
+BLGrby=SSH configuration has been applied
+Dq9sXa=systemctl restart {} failed, please execute manually
 # ◆=install_docker
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
@@ -91,9 +91,12 @@ ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-DvEyZZ=自动安装 '$lnx_cmd' ...
-BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
-CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
+DtZJ4v=Automatically installing {} ...
+Ar7Pu3={} installation failed, please install manually. Log: {} [{}]
+Bg2ZYl={} installation successful, Log: {} [{}]
+# ◆=monitor_progress
+ATkIIM=Monitoring process {}...
+APOzfr=Completed
 
 # ■=lib/docker.sh
 # ◆=show_notice
@@ -219,11 +222,19 @@ BQmsyM=Installing {}...
 DE4sbC=Installation of {} completed
 
 # ■=python/config_sshd.py
+# ◆=run_command
+DWA16R=Failed to execute command: {}
 # ◆=config_sshd
-CprXXr=错误: SSH配置文件 {} 不存在
-DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
-B_09im=输入新的SSH端口 (当前: {}):
-DZ4Zcf=\n操作已取消
+BFAuER=[Error]: SSH configuration file {} does not exist
+A7WXKO=SSH is running (current port: {}). Do you want to reconfigure it?
+DzCitM=Enter new SSH port (current: {}):
+DZskNc=Keep current port: {}
+CPPvBn=✓ SSH port set to: {}
+ARXwDM=✗ Failed to set SSH port
+A2bCmM=\nOperation cancelled
+DfSYhJ=Allow root login via SSH?:
+CCxIZL=✓ Root login allowed
+BjKmh3=✓ Root login disabled
 
 # ■=python/file_util.py
 # ◆=copy_file
