--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -11,5 +11,5 @@ Lizenziert unter GPL v3. Dies ist freie Software ohne jegliche Garantie."
 # msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
-MSG_WARNING="Warnung"
-MSG_INFO="Information"
+MSG_WARNING="Warn."
+MSG_INFO="Info"
