--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -11,5 +11,5 @@ Licenciado bajo GPL v3. Este es un software libre SIN NINGUNA GARANTÍA."
 # msg_handler
 MSG_ERROR="Error"
 MSG_SUCCESS="Éxito"
-MSG_WARNING="Advertencia"
-MSG_INFO="Información"
+MSG_WARNING="Aviso"
+MSG_INFO="Info"
