--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -11,5 +11,5 @@ Sous licence GPL v3. Ce logiciel est gratuit et sans AUCUNE GARANTIE."
 # msg_handler
 MSG_ERROR="Erreur"
 MSG_SUCCESS="Succès"
-MSG_WARNING="Avertissement"
+MSG_WARNING="Avert."
 MSG_INFO="Info"
